# Qt6_MusicPlayer

./: CMakeLists.txt  README.md  app_icon.rc  main.cpp  musicplayer.cpp  musicplayer.h  musicplayer.ui  res.qrc  restarhalf.hpp
.github/workflows/: cmake-single-platform.yml
